[project]
name = "soliket"
dynamic = ['version']
authors = [
    { name = "Simons Observatory" }
]
description = "Likelihood and Theory codes for the Simons Observatory."
readme = "README.rst"
requires-python = ">3.9,<3.12"
license = { text = "MIT" }

dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "scipy (>=1.6)",
    "cobaya (>=3.5.7,<4.0.0)",
    "sacc (>=1.0.2,<2.0.0)",
    "fgspectra (>=1.1.0)",
    "pyhalomodel (>=1.0.2,<2.0.0)",
    "camb (>=1.6.0,<2.0.0)",
    "getdist (>=1.6.4,<2.0.0)",
    "syslibrary (>=0.2.0)",
    "mflike (>=1.0.0)",
    "numpy (>=1.24.1,<2.0.0)",
    "astropy (<7.1.0)",
    "pyccl==3.2.0 ; sys_platform != 'win32'",
]

[project.urls]
Homepage = "https://github.com/simonsobs/SOLikeT/"
Documentation = "https://soliket.readthedocs.io/en/latest/"

[project.optional-dependencies]
emulator = [
    "cosmopower (>=0.2.0,<0.3.0)",
    "tensorflow-probability (<0.22)",
    "tensorflow (>=2.12)"
]
docs = [
    "sphinx (<8.2.3)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
]
dev = [
    "pytest (>=8.4.0,<9.0.0)",
    "ruff (>=0.11.12,<0.12.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "poetry-plugin-export (>=1.9.0,<2.0.0)",
    "pre-commit>=4.2.0",
    "pyupgrade>=3.20.0",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = [
    "soliket",
    "soliket.bandpass",
    "soliket.bias",
    "soliket.cash",
    "soliket.ccl",
    "soliket.clusters",
    "soliket.cosmopower",
    "soliket.cross_correlation",
    "soliket.foreground",
    "soliket.gaussian",
    "soliket.halo_model",
    "soliket.lensing",
    "soliket.mflike",
    "soliket.poisson",
    "soliket.ps",
    "soliket.xcorr",
]

[tool.setuptools.package-data]
"*" = ['*.yaml', '*.fits', '*.txt', '*.pkl', '*.gz']

[tool.setuptools_scm]
version_file = "soliket/_version.py"

[tool.ruff.lint]
select = ["E713", "E703", "E714", "E741", "E10", "E11", "E20", "E22", "E23", "E25", "E262", "E27", "E301", "E302", "E304", "E9", "F405", "F406", "F5", "F6", "F7", "F8", "E501", "W191", "F401", "W1", "W292", "W293", "W3"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]
"docs/*" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff]
exclude = [".tox", "build", "cobaya_packages", "test", ".eggs"]
line-length = 90

[tool.coverage.run]
omit = [
    "soliket/tests/*",
    "soliket/*/tests/*",
    "*/soliket/tests/*",
    "*/soliket/*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about packages we have installed
    "except ImportError",
    "except ModuleNotFoundError",
    # Don't complain if tests don't hit assertions
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain about script hooks
    "def main\\(.*\\):",
    # Ignore branches that don't pertain to this version of Python
    "pragma: py{ignore_python_version}",
    # Don't complain about IPython completion helper
    "def _ipython_key_completions_",
]
