[metadata]
name = soliket
version = 0.0
description = "SO Likelihoods & Theories"


[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    compilers
    cython
    astropy>=4
    scikit-learn
    numpy
    scipy
    cobaya
    sacc
    pyccl
    fgspectra @ git+https://github.com/simonsobs/fgspectra@act_sz_x_cib#egg=fgspectra
    mflike @ git+https://github.com/simonsobs/lat_mflike@master

[options.extras_require]
test =
    pytest-astropy
    pytest-rerunfailures
    cosmopower
all =
    cosmopower

[options.package_data]
soliket = *.yaml,*.bibtex,clusters/data/*,clusters/data/selFn_equD56/*,lensing/data/*.txt
testpaths = "soliket"
astropy_header = true
text_file_format = rst

[coverage:run]
omit =
    soliket/tests/*
    soliket/*/tests/*
    */soliket/tests/*
    */soliket/*/tests/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    except ModuleNotFoundError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_

[flake8]
select = E713,E704,E703,E714,E741,E10,E11,E20,E22,E23,E25,E27,E301,E302,E304,E9,
         F405,F406,F5,F6,F7,F8,W1,W2,W3,W6,E501
max-line-length = 90
exclude = .tox,build
