[metadata]
name = soliket
author = simonsobs
version = 0.1.dev
description = "SO Likelihoods & Theories"
long_description = file: README.rst
url = https://github.com/simonsobs/SOLikeT/
edit_on_github = True

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy
    scipy
    pandas
    scikit-learn
    astropy
    camb
    getdist
    cobaya
    pyccl
    sacc
    fgspectra>=1.1.0
    syslibrary

[options.package_data]
soliket = *.yaml,*.bibtex,clusters/data/*,clusters/data/selFn_equD56/*,lensing/data/*.txt,lensing/data/*.fits,mflike/*.yaml,tests/*.yaml,data/xcorr_simulated/*.txt,data/CosmoPower/CP_paper/CMB/*.pkl,tests/data/test_bandpass/*
testpaths = "soliket"
text_file_format = rst

[options.extras_require]
all = 
    cosmopower
docs =
    sphinx

[flake8]
select = E713,E704,E703,E714,E741,E10,E11,E20,E22,E23,E25,E27,E301,E302,E304,E9,
		 F405,F406,F5,F6,F7,F8,E501
max-line-length = 90
exclude = .tox,build,cobaya_packages,test,.eggs

[coverage:run]
omit =
    soliket/tests/*
    soliket/*/tests/*
    */soliket/tests/*
    */soliket/*/tests/*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    except ModuleNotFoundError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
